--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -20,6 +20,7 @@
         android:id="@+id/tv_leaderboard" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_leaderboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_leaderboard" />
