--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -3,21 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="12dp">
+    android:padding="12dp"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="name"
-        android:textSize="32sp" />
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="score"
-        android:textSize="32sp"
-        android:layout_marginStart="220dp"/>
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:layout_marginStart="16dp"
+        />
 
 </LinearLayout>
